# tutorial-converter

./: .gitignore  Ollama Instruction.md  README.md  app.py  dev_log.md  development_log.md  docker-compose.yml  instruction.md  pyproject.toml  verify_pipeline.py
UI/: UI concept.md
UI/frontend_trading agent/: index.html  package-lock.json  package.json  vite.config.js
UI/frontend_trading agent/src/: App.vue  style.css
UI/frontend_trading agent/src/components/: AnalysisFeed.vue  ConfigForm.vue  ReportViewer.vue  SettingsModal.vue
UI/frontend_trading agent/src/services/: api.js
agents/: prompts.py  workflow.py
converter/: urls.py  views.py
core/: assembly.py  engine.py  indexer.py  ingestion.py  vision.py
database/: vector_store.py
static/js/: app.js
templates/: base.html  styles.css  theme_kids.html  theme_pro.html
templates/converter/: index.html  result.html
web_ui/: asgi.py  settings.py  urls.py  wsgi.py
web_ui/static/js/: app.js
web_ui/templates/converter/: index.html
