[tool.poetry]
name = "convertit"
version = "0.1.0"
description = "Full-stack AI tutorial converter with micro-service architecture"
authors = ["williamqiu1996@gmail.com"]
readme = "README.md"
packages = [{include = "core"}, {include = "agents"}, {include = "database"}]

[tool.poetry.dependencies]
python = "^3.10"
litellm = "^1.0.0"
ollama = "^0.1.0"
chromadb = "^0.4.0"
langgraph = "^0.0.10"
langchain = "^0.1.0"
pydantic = "^2.0.0"
instructor = "^1.0.0"
jinja2 = "^3.1.0"
weasyprint = "^60.0"
chainlit = "^1.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
llama-index = "^0.10.0"
llama-parse = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
